[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", features = ["std"] , branch = "cherry" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
