[package]
name = "cherry-runtime"
version = "0.2.0-alpha"
edition = "2021"
build = "build.rs"

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.137", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"
smallvec = "1.8.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
beefy-primitives = { git = "https://github.com/CherryNetwork/substrate", package = "sp-consensus-beefy", default-features = false , branch = "cherry-testnet" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
inherents = { package = "sp-inherents", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-arithmetic = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet", default-features = false }
sp-std = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-mmr-primitives = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-session = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-version = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-npos-elections = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }

pallet-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-authorship = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-babe = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-bags-list = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-bounties = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-child-bounties = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-ipfs = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-ipfs-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-transaction-payment = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-collective = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-elections-phragmen = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-election-provider-multi-phase = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-fast-unstake = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
frame-executive = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-grandpa = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-identity = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-im-online = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-indices = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-membership = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-multisig = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-offences = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-preimage = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-proxy = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-scheduler = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-session = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-sudo = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
frame-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-staking-reward-fn = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet", default-features = false }
frame-system = {git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
frame-system-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
cherry-runtime-constants = { package = "cherry-runtime-constants", path = "./constants", default-features = false }
pallet-timestamp = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-tips = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-treasury = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-vesting = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-utility = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
frame-election-provider-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }

frame-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry-testnet" }
frame-try-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry-testnet" }
frame-system-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry-testnet" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry-testnet" }
pallet-offences-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry-testnet" }
pallet-session-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry-testnet" }
hex-literal = { version = "0.3.4", optional = true }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../xcm/xcm-builder", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-trie = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
trie-db = "0.23.1"
serde_json = "1.0.81"
separator = "0.4.1"
tokio = { version = "1.22.0", features = ["macros"] }
sp-tracing = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-mmr-primitives/std",
	"frame-support/std",
	"frame-executive/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"pallet-ipfs/std",
	"pallet-ipfs-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-elections-phragmen/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-fast-unstake/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-staking-reward-fn/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-tips/std",
	"pallet-babe/std",
	"pallet-vesting/std",
	"pallet-utility/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"cherry-runtime-constants/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
	"log/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"frame-try-runtime/std",
	"sp-npos-elections/std",
	"beefy-primitives/std",
	"frame-election-provider-support/std",
	"pallet-xcm/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
]
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-fast-unstake/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
	"xcm-builder/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-fast-unstake/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-utility/try-runtime",
	"runtime-common/try-runtime",
]
# When enabled, the runtime API will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime API exported functions
# in WASM.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	"sp-api/disable-logging",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

runtime-metrics = ["runtime-parachains/runtime-metrics", "sp-io/with-tracing"]
