[package]
name = "polkadot-runtime"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
serde = { version = "1.0.137", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
static_assertions = "1.1.0"
smallvec = "1.8.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
beefy-primitives = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
inherents = { package = "sp-inherents", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-std = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-mmr-primitives = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-session = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-version = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
sp-npos-elections = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }

pallet-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-authorship = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-assets = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-babe = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-bags-list = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-bounties = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-child-bounties = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-council = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-ipfs = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-transaction-payment = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-collective = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-democracy = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-elections-phragmen = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-election-provider-multi-phase = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
frame-executive = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-grandpa = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-identity = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-im-online = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-indices = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-membership = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-multisig = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-offences = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-preimage = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-proxy = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-scheduler = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-session = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
frame-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-staking-reward-curve = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
frame-system = {git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
frame-system-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
polkadot-runtime-constants = { package = "polkadot-runtime-constants", path = "./constants", default-features = false }
pallet-timestamp = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-tips = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-treasury = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-vesting = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-utility = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
frame-election-provider-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry" }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }

frame-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry" }
frame-try-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry" }
frame-system-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry" }
pallet-offences-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry" }
pallet-session-benchmarking = { git = "https://github.com/CherryNetwork/substrate", default-features = false, optional = true , branch = "cherry" }
hex-literal = { version = "0.3.4", optional = true }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
runtime-parachains = { package = "polkadot-runtime-parachains", path = "../parachains", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
xcm-builder = { package = "xcm-builder", path = "../../xcm/xcm-builder", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-trie = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
trie-db = "0.23.1"
serde_json = "1.0.81"
separator = "0.4.1"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"pallet-assets/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-mmr-primitives/std",
	"frame-support/std",
	"frame-executive/std",
	"pallet-authority-discovery/std",
	"pallet-authorship/std",
	"pallet-bags-list/std",
	"pallet-balances/std",
	"pallet-bounties/std",
	"pallet-child-bounties/std",
	"pallet-council/std",
	"pallet-ipfs/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-collective/std",
	"pallet-elections-phragmen/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-democracy/std",
	"pallet-grandpa/std",
	"pallet-identity/std",
	"pallet-im-online/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-multisig/std",
	"pallet-offences/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-treasury/std",
	"pallet-tips/std",
	"pallet-babe/std",
	"pallet-vesting/std",
	"pallet-utility/std",
	"sp-runtime/std",
	"sp-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"polkadot-runtime-constants/std",
	"sp-version/std",
	"serde_derive",
	"serde/std",
	"log/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"frame-try-runtime/std",
	"sp-npos-elections/std",
	"beefy-primitives/std",
	"frame-election-provider-support/std",
	"pallet-xcm/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
]
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-elections-phragmen/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-election-provider-support-benchmarking/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-bounties/runtime-benchmarks",
	"pallet-child-bounties/runtime-benchmarks",
	"pallet-tips/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	"frame-system-benchmarking",
	"hex-literal",
	"xcm-builder/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"runtime-parachains/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bags-list/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-elections-phragmen/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-tips/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-vesting/try-runtime",
	"pallet-utility/try-runtime",
	"runtime-common/try-runtime",
]
# When enabled, the runtime API will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime API exported functions
# in WASM.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	"sp-api/disable-logging",
]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

runtime-metrics = ["runtime-parachains/runtime-metrics", "sp-io/with-tracing"]
