[package]
name = "polkadot-test-runtime"
version = "0.9.27"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.8.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
beefy-primitives = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
inherents = { package = "sp-inherents", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
sp-std = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
sp-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
sp-mmr-primitives = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
sp-session = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
sp-version = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
frame-election-provider-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }

pallet-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-authorship = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-babe = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-transaction-payment = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
frame-executive = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-grandpa = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-indices = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-offences = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-session = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
frame-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-staking-reward-curve = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
frame-system = {git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
frame-system-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
test-runtime-constants = { package = "test-runtime-constants", path = "./constants", default-features = false }
pallet-timestamp = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-sudo = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }
pallet-vesting = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-ipfs" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
polkadot-runtime-parachains = { path = "../parachains", default-features = false, features = ["vstaging"]}
xcm-builder = { path = "../../xcm/xcm-builder", default-features = false }
xcm-executor = { path = "../../xcm/xcm-executor", default-features = false }
xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
sp-trie = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }
serde_json = "1.0.81"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-ipfs" }

[features]
default = ["std"]
no_std = []
only-staking = []
runtime-metrics = ["polkadot-runtime-parachains/runtime-metrics", "sp-io/with-tracing"]

std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"pallet-xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"test-runtime-constants/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"pallet-vesting/std",
	"serde_derive",
	"serde/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"log/std",
	"frame-election-provider-support/std",
	"pallet-sudo/std",
]
