[package]
name = "polkadot-test-runtime"
build = "build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.3.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.139", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
smallvec = "1.8.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
inherents = { package = "sp-inherents", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
offchain-primitives = { package = "sp-offchain", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-std = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-runtime = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-core = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-mmr-primitives = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-session = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
sp-version = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
frame-election-provider-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
tx-pool-api = { package = "sp-transaction-pool", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }

pallet-authority-discovery = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-authorship = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-babe = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-balances = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-transaction-payment = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
frame-executive = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-grandpa = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-indices = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-offences = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-session = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
frame-support = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-staking = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-staking-reward-curve = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
frame-system = {git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
frame-system-rpc-runtime-api = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
test-runtime-constants = { package = "test-runtime-constants", path = "./constants", default-features = false }
pallet-timestamp = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-sudo = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }
pallet-vesting = { git = "https://github.com/CherryNetwork/substrate", default-features = false , branch = "cherry-testnet" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
pallet-xcm = { path = "../../xcm/pallet-xcm", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }
polkadot-runtime-parachains = { path = "../parachains", default-features = false }
xcm-builder = { path = "../../xcm/xcm-builder", default-features = false }
xcm-executor = { path = "../../xcm/xcm-executor", default-features = false }
xcm = { path = "../../xcm", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
keyring = { package = "sp-keyring", git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
sp-trie = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }
serde_json = "1.0.81"

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry-testnet" }

[features]
default = ["std"]
no_std = []
only-staking = []
runtime-metrics = ["polkadot-runtime-parachains/runtime-metrics", "sp-io/with-tracing"]

std = [
	"authority-discovery-primitives/std",
	"pallet-authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"pallet-xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frame-executive/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"pallet-staking/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"test-runtime-constants/std",
	"pallet-timestamp/std",
	"sp-version/std",
	"pallet-vesting/std",
	"serde_derive",
	"serde/std",
	"pallet-babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"runtime-common/std",
	"log/std",
	"frame-election-provider-support/std",
	"pallet-sudo/std",
]

runtime-benchmarks = [
	"pallet-xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
]
