[package]
name = "polkadot-voter-bags"
version = "0.9.33"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }

generate-bags = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }
sp-io = { git = "https://github.com/CherryNetwork/substrate", branch = "cherry" }

cherry-runtime = { path = "../../runtime/cherry" }
